--- a/app/src/main/res/layout/activity_consult_code.xml
+++ b/app/src/main/res/layout/activity_consult_code.xml
@@ -33,7 +33,7 @@
         app:layout_constraintGuide_begin="270dp" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/txConsultTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/consultTitle"
@@ -52,7 +52,7 @@
         app:layout_constraintGuide_begin="20dp" />
 
     <ImageButton
-        android:id="@+id/btn_back"
+        android:id="@+id/btn_backConsult"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginTop="8dp"
@@ -63,9 +63,13 @@
         tools:ignore="SpeakableTextPresentCheck" />
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="60dp"
+        android:textColorHint="@color/black"
+        app:boxStrokeColor="@color/secondary"
+        app:hintTextColor="@color/secondary"
         app:layout_constraintEnd_toStartOf="@+id/guideline9"
         app:layout_constraintStart_toStartOf="@+id/guideline10"
         app:layout_constraintTop_toBottomOf="@+id/view">
@@ -78,7 +82,7 @@
             android:hint="@string/cep"
             android:inputType="number"
             android:singleLine="true"
-            android:textColor="@color/black" />
+            tools:ignore="TextContrastCheck" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.constraintlayout.widget.Guideline
@@ -94,4 +98,15 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_begin="40dp" />
+
+    <Button
+        android:id="@+id/btn_consult"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="@string/consultButton"
+        app:layout_constraintEnd_toStartOf="@+id/guideline9"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="@+id/guideline10"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
