--- a/app/src/main/res/layout/activity_consult_code.xml
+++ b/app/src/main/res/layout/activity_consult_code.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".activities.ConsultCodeActivity">
 
     <ImageView
@@ -82,6 +83,7 @@
             android:hint="@string/cep"
             android:inputType="number"
             android:singleLine="true"
+            android:textColor="@color/black"
             tools:ignore="TextContrastCheck" />
     </com.google.android.material.textfield.TextInputLayout>
 
